fix: Modify code spacing for readability

--- a/p3-react-app/src/pages/Customer.css
+++ b/p3-react-app/src/pages/Customer.css
@@ -30,3 +30,12 @@
   border: 2px solid black;
   padding: 10px;
 }
+
+.Customer-tracking-modal-content form {
+  display: flex;
+  flex-direction: column;
+}
+
+form input {
+  height: fit-content;
+}
